--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Faculty App</string>
+    <string name="app_name">Restaurant App</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -10,8 +10,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-    <string name="add_faculty_str">Добавить фаультет</string>
-    <string name="add_dep_str">Добавить направление подготовки</string>
-    <string name="string_add_dep_str">Добавить направление подготовки</string>
-    <string name="delete_faculty_str">Удалить факультет</string>
+    <string name="add_faculty_str">Добавить категорию в меню</string>
+    <string name="add_dep_str">Добавить вид блюда</string>
+    <string name="string_add_dep_str">Добавить вид блюда</string>
+    <string name="delete_faculty_str">Удалить категорию в меню</string>
 </resources>
